Refactoring power control logic